2006-01-28  Luc Verhaegen  <libv@skynet.be>

	* src/tseng.h:
	* src/tseng_driver.c: (TsengGetRec), (TsengFreeRec),
	(TsengPreInit):
	* src/tseng_mode.c: (STG1703Detect), (STG1703PrintRegs),
	(STG1703Store), (STG1703Restore), (STG1703Clock), (STG1703Mode),
	(TsengRAMDACProbe), (tseng_set_ramdac_bpp), (TsengSave),
	(TsengRestore), (TsengModeInit):

	Fully implement the SGS-Thomson STG-1703. This is working great
	except for 24bpp, where there seems to be an offset issue. Red is
	blue, green is red, blue is green. Will dig that one out later on.
	8bpp and 16bpp (both with 8 and 16bit dac bus) and 32bpp are great.

2006-01-28  Luc Verhaegen  <libv@skynet.be>

	* src/tseng.h:
	* src/tseng_mode.c: (tseng_set_ramdac_bpp), (ET6000CalcClock),
	(TsengSave), (TsengRestore), (TsengModeInit):
	
	- Remove pTseng->ModeReg
	- Split ET6000 bpp, dotclock and ram clock handling from the 
	  ET4000s ramdac code.

2006-01-27  Luc Verhaegen  <libv@skynet.be>

	* src/tseng.h:
	* src/tseng_mode.c: (tseng_set_ramdac_bpp), (tseng_clock_setup),
	(TsengModeInit):

	Clear duplicate PrivFlag.

2006-01-26  Luc Verhaegen  <libv@skynet.be>

	* src/tseng.h:
	* src/tseng_cursor.c: (ET4000CursorRead), (ET4000CursorWrite),
	(TsengShowCursor), (TsengHideCursor), (TsengSetCursorPosition),
	(TsengSetCursorColors), (TsengLoadCursorImage),
	(TsengHWCursorInit), (TsengCursorStore), (TsengCursorRestore):
	* src/tseng_driver.c: (TsengUnlock), (TsengLock),
	(TsengPreInitPCI), (et6000_check_videoram), (TsengDetectMem),
	(TsengProcessHibit), (TsengPreInit), (TsengEnterVT),
	(TsengLeaveVT), (TsengSaveScreen):
	* src/tseng_mode.c: (vgaHWReadDacReadAddr), (vgaHWWriteBank),
	(vgaHWReadBank), (vgaHWWriteSegment), (vgaHWReadSegment),
	(vgaHWWriteModeControl), (vgaHWHerculesSecondPage), (ET6000IORead),
	(ET6000IOWrite), (TsengRAMDACProbe), (tseng_set_ramdac_bpp),
	(TsengAdjustFrame), (TsengSave), (TsengRestore), (TsengModeInit),
	(TsengCrtcDPMSSet), (TsengHVSyncDPMSSet):

	Improve tseng driver transparency.